--- a/smartutilitymanagment/app/src/main/res/values/themes.xml
+++ b/smartutilitymanagment/app/src/main/res/values/themes.xml
@@ -2,8 +2,21 @@
     <!-- Base application theme. -->
     <style name="Base.Theme.SmartUtilityManagment" parent="Theme.Material3.DayNight.NoActionBar">
         <!-- Customize your light theme here. -->
-        <!-- <item name="colorPrimary">@color/my_light_primary</item> -->
+        <item name="colorPrimary">@color/lavender</item>
+        <item name="colorPrimaryVariant">@color/lavender</item>
+        <item name="colorOnPrimary">@color/white</item>
+        <item name="colorSecondary">@color/teal_200</item>
+        <item name="colorSecondaryVariant">@color/teal_500</item>
+        <item name="colorOnSecondary">@color/black</item>
+        <item name="android:statusBarColor">?attr/colorPrimaryVariant</item>
+
+
+
+
+
     </style>
 
     <style name="Theme.SmartUtilityManagment" parent="Base.Theme.SmartUtilityManagment" />
+
+    <color name="white">#FDFDFD</color>
 </resources>
